--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "@react-navigation/stack": "^6.4.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "module-resolver": "^1.0.0",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-gesture-handler": "^2.17.1",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.13.0",
-    "react-native-safe-area-context": "^4.10.7",
+    "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "^3.32.0",
     "react-native-shared-element": "^0.8.9",
+    "react-native-svg": "12.1.1",
     "react-navigation-shared-element": "^3.1.3"
   },
   "devDependencies": {
